appId: com.learning.myquran.stg
---
- launchApp
- tapOn: "Email"
- inputText: "eve.holt@reqres.in"
- tapOn: "Password"
- inputText: "password123"
- tapOn: "LOGIN"
