appId: com.learning.myquran.stg
---
- tapOn: "Menu"
- tapOn: "Logout"
- tapOn: "Yes"