appId: com.learning.myquran.stg
---
- tapOn: "DON'T HAVE AN ACCOUNT?"
- tapOn: "Email"
- inputText: "eve.holt@reqres.in"
- tapOn: "password\nPassword"
- inputText: "pistol"
- tapOn:
    point: "50%,38%"
- tapOn: "repeat_password\nRepeat Password"
- inputText: "pistol"
- tapOn:
    point: "50%,38%"
- tapOn: "REGISTER"
